k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-portal-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - DOMAIN_PLACEHOLDER
      secretName: ciyex-portal-ui-tls
  rules:
    - host: DOMAIN_PLACEHOLDER
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ciyex-portal-ui
                port:
                  number: 3000
